# willhaben

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
src/willhaben/: __init__.py  __main__.py  client.py  constants.py  models.py  realestate.py  search.py
tests/: conftest.py  test_client.py  test_live.py  test_models.py  test_realestate_models.py  test_realestate_search.py  test_search.py
tests/fixtures/: realestate_response.json  search_response.json
