[project]
name = "willhaben"
version = "0.1.0"
requires-python = ">=3.13"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = ["live: hits the real Willhaben API (requires network)"]
addopts = "-m 'not live'"
testpaths = ["tests"]
