[project]
name = "willhaben"
version = "0.1.0"
requires-python = ">=3.13"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[tool.pytest.ini_options]
markers = ["live: hits the real Willhaben API (requires network)"]
addopts = "-m 'not live'"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PTH",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
    "W",
]
ignore = [
    "E501",
    "RUF010",
    "RUF012",
    "SIM105",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["willhaben"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"tests*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
